Fix stretched article images

--- a/app/components/article-item/style.scss
+++ b/app/components/article-item/style.scss
@@ -6,6 +6,7 @@
     max-width: 280px;
     // max-height: 280px;
     max-height: 160px;
+    object-fit: cover;
   }
 
   &__card {
